docs/static/css/style.css
@font-face {
  font-family: "Hk Grotesk";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/HKGrotesk-Regular.woff") format("woff");
}

@font-face {
  font-family: "Jost";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/Jost-Regular.ttf") format("woff");
}

:root {
  --font: "Hk Grotesk", sans-serif;
  --font-size-small: 1.8rem;
  --font-size-normal: 2.2rem;
  --font-size-medium: 2.8rem;
  --font-size-medium-1: 3.6rem;
  --font-size-large: 5.5rem;
  --font-size-extra-large: 7.5rem;

  --line-height-normal: 1.7;
  --line-height-small: 1.2;

  --orange: #ff8a00;
  --blue: #276af6;
  --cyan: #41aec9;
  --black: #17141d;
  --white: #fff;
  --white-1: #e5e5e6da;
  --light-dark: #7a7a8c;
  --tag-bg: #454e56;
  --gradient: linear-gradient(90deg, var(--blue), var(--cyan));

  --border-bottom: #7a7a8c;
  --border-light: 1px solid rgb(36, 35, 35);

  --container-max-width: 1180px;
  --container-normal-width: 800px;
  --container-medium-width: 700px;
  --container-small-width: 500px;

  --gutter-huge: 12rem;
  --gutter-medium: 6rem;
  --gutter-normal: 3rem;
  --gutter-small: 2.5rem;
  --gutter-small-1: 2.5rem;
  --gutter-extra-small: 2rem;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 62.5%;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

@media (max-width: 1000px) {
  html {
    font-size: 52%;
  }
}

body {
  font-size: var(--font-size-normal);
  font-family: var(--font);
  font-weight: 400;
  color: var(--white-1);
  line-height: var(--line-height-normal);
  background: var(--black);
  overflow-x: hidden;
}

img {
  object-fit: contain;
  max-width: 100%;
}

.container {
  max-width: var(--container-max-width);
  margin: 0 auto;
}

@media (max-width: 1340px) {
  .container {
    max-width: 1100px;
  }
}

@media (max-width: 1240px) {
  .container {
    padding: 0 var(--gutter-normal);
  }
}
@media (max-width: 600px) {
  .container {
    max-width: 0 var(--gutter-normal);
  }
}

section {
  padding: var(--gutter-huge) 0;
  border-bottom: var(--border-light);
}

/*typography*/
h1,
h2,
h3 {
  font-family: "Jost", sans-serif;
  line-height: var(--line-height-small);
  font-weight: 400;
  color: var(--white);
}

.heading-primary {
  line-height: 1;
  font-size: var(--font-size-extra-large);
  font-weight: 400;
}

h2 {
  font-size: var(--font-size-large);
  margin-bottom: var(--gutter-medium);
}

h2::after {
  content: "";
  display: block;
  height: 2px;
  width: 10rem;
  background: var(--gradient);
  margin: var(--gutter-small) 0;
}

h3 {
  font-size: var(--font-size-medium-1);
  margin-bottom: var(--gutter-small);
}

@media (max-width: 500px) {
  .heading-primary {
    font-size: var(--font-size-large);
  }

  h2 {
    font-size: var(--font-size-medium-1);
  }

  h3 {
    font-size: var(--font-size-medium);
  }
}

p {
  margin: var(--gutter-small-1) 0;
}

/* @media (max-width: 900px) {
 .heading-primary {
    font-size: var(--font-size-large);
  }

  p {
    max-width: var(--container-small-width);
  }
} */

/*nav*/
.navbar {
  display: flex;
  justify-content: flex-end;
  padding: var(--gutter-normal) 0;
}

.navbar-items {
  display: flex;
  list-style: none;
}

.navbar-item:not(:last-child) {
  margin-right: var(--gutter-normal);
}

@media (max-width: 500px) {
  .navbar {
    justify-content: center;
  }
}

/* @media (max-width: 400px) {
  .navbar-item:not(:last-child) {
    margin-right: var(--gutter-normal);
  }
} */

@media (max-width: 300ox) {
  .navbar {
    font-size: var(--font-size-small);
  }
}

.navbar-link {
  position: relative;
  display: inline-block;
  padding: 1rem 0;
  text-decoration: none;
  color: inherit;
}

.navbar-link:hover {
  background: var(--gradient);
  text-shadow: none;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
}

/* links and button */
a {
  color: var(--white);
  font-weight: 400;
  font-family: "Jost", sans-serif;
  outline: 2px solid transparent;
}

::-moz-focus-inner {
  border: 0;
}

button:focus,
a:focus {
  outline: 2px solid var(--blue);
}

body:not(.user-is-tabbing) button:focus,
body:not(.user-is-tabbing) a:focus {
  outline: none;
}

.link:hover {
  color: var(--blue);
}

.button {
  position: relative;
  display: inline-block;
  padding: 1rem 4.2rem;
  text-decoration: none;
  color: inherit;
  border: 1px solid var(--blue);
  font-weight: 400;
}

.button:focus {
  outline: none;
}

.button::after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 100%;
  background: var(--white);
  height: 100%;
  z-index: -1;
  transition: all 0.2s cubic-bezier(1, 0.68, 0.16, 0.9);
}

.button:hover::after,
.button:focus::after {
  right: 0;
  background: var(--gradient);
}

.button-blue {
  background: var(--gradient);
  transition: all 0.2s;
}

.button-blue::after {
  display: none;
}

.button-blue:hover,
.button-blue:focus {
  background: transparent;
}

.link-text {
  position: relative;
  display: inline-block;
  padding: 0.6rem;
  color: inherit;
  text-decoration: none;
  border-bottom: 1px solid var(--blue);
}

.link-text::after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 100%;
  background: var(--white);
  height: 100%;
  z-index: -1;
  transition: all 0.2s cubic-bezier(1, 0.68, 0.16, 0.9);
}

.link-text:focus {
  outline: none;
}

.link-text:hover::after,
.link-text:focus:after {
  right: 0;
  background: var(--gradient);
}

.link-text span {
  padding-left: 1rem;
  font-family: sans-serif;
}

/* Skills */
.skills {
  display: flex;
  justify-content: space-between;
}

.skills-icon {
  height: 6.5rem;
  max-width: 18rem;
}

.skills::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}
.skills::-webkit-scrollbar-thumb {
  background: #201c29;
  border-radius: 10px;
  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
}
/* ... */

